Fixing mobile overflow

--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,5 +1,5 @@
 * {
-    font-family: "Formular", "Furura", Verdana, Tahoma;
+    font-family: "Formular", "Futura", Verdana, Tahoma;
 }
 
 h1{
